# BrainVault

./: README.md  pyproject.toml
src/brainvault/: __init__.py  config.py  factory.py
src/brainvault/api/: __init__.py  app.py  auth.py  routes.py  vault_manager.py
src/brainvault/cli/: __init__.py  init_cmd.py  main.py  migrate_cmd.py  status_cmd.py  sync_cmd.py
src/brainvault/core/: __init__.py  database.py  storage.py
src/brainvault/db/: __init__.py  postgresql.py  schema.py  sqlite.py
src/brainvault/mcp/: __init__.py  server.py
src/brainvault/storage/: __init__.py  local.py  s3.py
src/brainvault/templates/: gitignore
src/brainvault/templates/.brainvault/: state.json
src/brainvault/templates/.obsidian/: app.json
src/brainvault/templates/meta/: config.yaml  profile.json  schema.md
src/brainvault/templates/wiki/: index.md  log.md
tests/: __init__.py  test_api.py  test_cli.py  test_config.py  test_db_schema.py  test_db_sqlite.py  test_factory.py  test_mcp_server.py  test_storage_local.py  test_storage_s3.py
